fixed overflow styles

--- a/css/normalize.css
+++ b/css/normalize.css
@@ -5,7 +5,6 @@
 *::before,
 *::after {
   box-sizing: border-box;
-  overflow: hidden;
 }
 
 div, section {
